[gd_scene load_steps=16 format=3 uid="uid://cjhmaa846w0vk"]

[ext_resource type="Script" uid="uid://ds3fs6ikb0ovg" path="res://Scenes/security_system.gd" id="1_2peis"]
[ext_resource type="Texture2D" uid="uid://c3qy4imv6apt5" path="res://Assets/Enemies/security_system.png" id="2_kcvg0"]
[ext_resource type="PackedScene" uid="uid://cx4ynr03ddmv8" path="res://Scenes/security_system_pillar.tscn" id="2_kfvlc"]
[ext_resource type="Texture2D" uid="uid://uwmr7rkh1tqh" path="res://Assets/Enemies/security_system_pipe.png" id="2_mmql8"]
[ext_resource type="Shader" uid="uid://dqlgtuowbyn8v" path="res://Shaders/flash.gdshader" id="2_q371w"]
[ext_resource type="Texture2D" uid="uid://duv50ludynuj2" path="res://Assets/Enemies/security_system_gem.png" id="6_onk4r"]
[ext_resource type="Texture2D" uid="uid://dyg0aid1hw26e" path="res://Assets/Other/star.png" id="7_k8seb"]
[ext_resource type="AudioStream" uid="uid://df7hctombiewg" path="res://SFX/star.wav" id="8_11um3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_00ofn"]
resource_local_to_scene = true
shader = ExtResource("2_q371w")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mmql8"]
radius = 91.0
height = 266.0

[sub_resource type="Animation" id="Animation_onk4r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pipes/Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pipes/Sprite2D4:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pipes/Sprite2D2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pipes/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1.19209e-07)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pipes/Sprite2D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pipes/Sprite2D2:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Pipes/Sprite2D4:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Pipes/Sprite2D3:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ColorRect:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Body/SecuritySystemGem:z_index")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Body/Star:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Body/Star:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kfvlc"]
resource_name = "boot_up"
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pipes/Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3, 3.3, 3.6, 3.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pipes/Sprite2D4:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3, 3.3, 3.6, 3.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pipes/Sprite2D2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 3.3, 3.6, 3.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pipes/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3, 3.3, 3.6, 3.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.9, 2.48),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/SecuritySystemGem:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 5, 0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/Star:scale")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Star:rotation")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AudioStreamPlayer2D")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_11um3")
}],
"times": PackedFloat32Array(0.2)
}
tracks/8/use_blend = true

[sub_resource type="Animation" id="Animation_11um3"]
resource_name = "change_color"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Star:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Star:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_gem_color"
}]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_11um3")
}],
"times": PackedFloat32Array(0.15)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_k8seb"]
resource_name = "idle"
length = 3.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -1.19209e-07), Vector2(0, 5), Vector2(0, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pipes/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, 0.174533, 0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pipes/Sprite2D2:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.261799, -0.349066, -0.261799]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pipes/Sprite2D4:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, 0.349066, 0.261799]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pipes/Sprite2D3:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.261799, -0.174533, -0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_11um3"]
_data = {
&"RESET": SubResource("Animation_onk4r"),
&"boot_up": SubResource("Animation_kfvlc"),
&"change_color": SubResource("Animation_11um3"),
&"idle": SubResource("Animation_k8seb")
}

[node name="SecuritySystem" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_2peis")

[node name="SecuritySystemPillar" parent="." instance=ExtResource("2_kfvlc")]
z_index = -1
position = Vector2(100, -50)

[node name="SecuritySystemPillar2" parent="." instance=ExtResource("2_kfvlc")]
z_index = -1
position = Vector2(-100, -50)

[node name="Pipes" type="Node2D" parent="."]
z_index = -2

[node name="Sprite2D" type="Sprite2D" parent="Pipes"]
position = Vector2(185, -110)
rotation = 0.261799
scale = Vector2(3, 3)
texture = ExtResource("2_mmql8")
hframes = 4

[node name="Sprite2D3" type="Sprite2D" parent="Pipes"]
position = Vector2(-185, -110)
rotation = -0.261799
scale = Vector2(3, 3)
texture = ExtResource("2_mmql8")
flip_h = true
hframes = 4

[node name="Sprite2D4" type="Sprite2D" parent="Pipes"]
position = Vector2(-80, -145)
rotation = 0.261799
scale = Vector2(3, 3)
texture = ExtResource("2_mmql8")
flip_h = true
hframes = 4

[node name="Sprite2D2" type="Sprite2D" parent="Pipes"]
position = Vector2(80, -145)
rotation = -0.261799
scale = Vector2(3, 3)
texture = ExtResource("2_mmql8")
hframes = 4

[node name="Body" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_00ofn")
position = Vector2(0, -1.19209e-07)
scale = Vector2(3, 3.05)
texture = ExtResource("2_kcvg0")

[node name="SecuritySystemGem" type="Sprite2D" parent="Body"]
position = Vector2(-2.10603e-06, -32.9508)
texture = ExtResource("6_onk4r")

[node name="Star" type="Sprite2D" parent="Body"]
z_index = 5
position = Vector2(0.333344, -31.8033)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("7_k8seb")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -45)
shape = SubResource("CapsuleShape2D_mmql8")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HPTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false

[node name="StatusTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_11um3")
}

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -641.0
offset_top = -988.0
offset_right = 640.0
offset_bottom = 988.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
